--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Name</title>
+    <title>Print My Name</title>
 </head>
 <body>
     <h1>Hello, Rujjira</h1>
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>เว็บไซต์ที่ตกแต่ง</title>
+    <style>
+        body {
+            background-color: #9DCAEB; /* สีฟ้า */
+            font-family: Arial, sans-serif; }
+    </style>
+</head>
+    <imag src="https://i.pinimg.com/originals/4a/8c/a7/4a8ca7f74f1df470f0380e8707111793.png" alt="red panda">
 </body>
 </html>
