--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             font-family: Arial, sans-serif; }
     </style>
 </head>
-    <imag src="https://i.pinimg.com/originals/4a/8c/a7/4a8ca7f74f1df470f0380e8707111793.png" alt="red panda">
+    <img src="https://pixabay.com/images/search/red%20panda/" alt="Red Panda">
 </body>
 </html>
