--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>เว็บไซต์ที่ตกแต่ง</title>
     <style>
         body {
-            background-color: #9DCAEB; /* สีฟ้า */
+            background-color: #9DCAEB; /* blue */
             font-family: Arial, sans-serif; }
     </style>
 </head>
