--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             font-family: Arial, sans-serif; }
     </style>
 </head>
-    <img src="https://pixabay.com/images/search/red%20panda/" alt="Red Panda">
+    <img src="https://pixabay.com/photos/little-panda-red-panda-cat-bear-7504633/" alt="Red Panda">
 </body>
 </html>
