--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             font-family: Arial, sans-serif; }
     </style>
 </head>
-    <img src="https://pixabay.com/photos/little-panda-red-panda-cat-bear-7504633/" alt="Red Panda">
+    <img src="https://www.thoughtco.com/thmb/7Rkkk587_0_JahSRvNCq2ABDEF8=/1168x0/filters:no_upscale():max_bytes(150000):strip_icc()/red-panda-149481947-5b577cbbc9e77c002560f581.jpg" alt="Red Panda">
 </body>
 </html>
