--- a/index.html
+++ b/index.html
@@ -17,4 +17,11 @@
 </head>
     <img src="https://www.thoughtco.com/thmb/7Rkkk587_0_JahSRvNCq2ABDEF8=/1168x0/filters:no_upscale():max_bytes(150000):strip_icc()/red-panda-149481947-5b577cbbc9e77c002560f581.jpg" alt="Red Panda">
 </body>
+    <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "eca75910-e6ca-483a-acd6-e6b7854342bd",
+        apiHost: "https://flowise-i7ha.onrender.com",
+    })
+</script>
 </html>
