--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: Arial, sans-serif; }
     </style>
 </head>
-    <img src="https://www.eucerin.co.th/-/media/eucerin/thailand/products/ultrasensitive/ultrasensitive-soothing-care.jpg" alt="Eucerin">
+    <img src="https://media.istockphoto.com/id/2162264456/th/รูปถ่าย/ทาครีมกันแดดที่ทะเลในวันหยุดฤดูร้อน.webp?s=612x612&w=is&k=20&c=373nD52RuN2ZtRbmOiSPflpbUJNJ2LkctB1ChrpqYYY=" alt="ครีมกันแดด">
 </body>
     <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
