--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "160ad438-2d70-42d9-b796-0f12f444d5a2",
-        apiHost: "https://flowise-i7ha.onrender.com",
+        chatflowid: "28d8e429-1524-48ac-a3c8-20d95a90d257",
+        apiHost: "https://rujjira-flowise-1.hf.space",
     })
 </script>
     })
